...
            txt.text = "Placeholder"
        return txt
        }()
    
    let saveButton: UIButton = {
        let btn = UIButton()
            btn.setTitle("Save", for: .normal)
            btn.tintColor = .white
            btn.backgroundColor = .actionOrange
        return btn
    }()
    
    let burnButton: UIButton = {
        let btn = UIButton()
            btn.setTitle("Burn", for: .normal)
            btn.tintColor = .white
            btn.backgroundColor = .actionRed
        return btn
    }()
    
    override init(frame: CGRect) {
...
